--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"uuid": "4e0c6f8a-da65-494d-9a08-aed2fa074715"
 	},
 	"engines": {
-		"node": ">=12.x.x <=16.x.x",
+		"node": "14.18.2",
 		"npm": ">=6.0.0"
 	},
 	"license": "MIT"
